--- a/a3_group98/MusicEventCentral/templates/base.html
+++ b/a3_group98/MusicEventCentral/templates/base.html
@@ -17,10 +17,10 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid ">
                 <!-- App Name or Logo -->
-                <a href="#" class="navbar-brand">
+                <a href="/" class="navbar-brand">
                     <div class="row">
                         <div class="col-md-2">
-                            <img class="img" style="max-height: 30px" src="static/img/logo.png" alt="Logo">
+                            <img class="img" style="max-height: 30px" src="/static/img/logo.png" alt="Logo">
                         </div>
                         <div class="col-md-2">
                             <h5>Music Event Central</h5>
@@ -42,7 +42,7 @@
                 <!-- Navbar -->
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link" href="event_listing.html">Find Events</a>
+                        <a class="nav-item nav-link" href="/events/listing">Find Events</a>
                         <a class="nav-item nav-link" href="booking_history.html">Login</a>
                         <a class="nav-item nav-link" href="#">Register</a>
                     </div>
