--- a/a3_group98/MusicEventCentral/templates/user.html
+++ b/a3_group98/MusicEventCentral/templates/user.html
@@ -1,39 +1,17 @@
-{% include "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
-{% block body %}
+{% extends "base.html" %}
 
+{% from 'bootstrap5/form.html' import render_form %}
+
+{% block content %}
+
+<div class="container">
 <div class="page-header">
     <h4>{{heading}}</h4>
 </div>
 
-
-
-<div class="container-fluid">
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert" aria-label="close">x</button>
-        {{message}}
-    </div>
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
-
-</div>
-
-
-
 <!-- Form rendering is simple and easy if using bootstrap -->
-<div class="col-md-6">
-    {{wtf.render_form(form)}}
+<div class="col-md-6 ml-5">
+  {{render_form(form)}}
 </div>
-
-<!-- When you have login form, then do show the user a link to register -->
-{% if heading|lower =='login' %}
-<div class="col-md-4">
-    <p>New user? <a href="{{ url_for('register') }}">Click here to register</a>.</p>
-</div>
-{% endif %}
 
 {% endblock %}
