--- a/a3_group98/MusicEventCentral/templates/base.html
+++ b/a3_group98/MusicEventCentral/templates/base.html
@@ -42,13 +42,18 @@
                 <!-- Navbar -->
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link" href="/events/listing">Find Events</a>
+                        
                         <!-- Register/Login/Logout and welcome -->
-
+                        
                         {% if current_user.is_authenticated %}
                         <a class="nav-item nav-link disabled text-muted" href="#">Welcome {{current_user.name}}</a>
+                        <a class="nav-item nav-link" href="/events/listing">Find Events</a>
+                        <a class="nav-item nav-link" href="{{ url_for('event.create') }}">Create Event</a>
+                        
+                        
                         <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
                         {% else %}
+                        <a class="nav-item nav-link" href="/events/listing">Find Events</a>
                         <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Register</a>
                         <a class="nav-item nav-link" href="{{ url_for('auth.login') }}">Log In</a>
                         {% endif %}
