--- a/a3_group98/MusicEventCentral/templates/events/booking_history.html
+++ b/a3_group98/MusicEventCentral/templates/events/booking_history.html
@@ -13,9 +13,19 @@
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h2 class="card-title">Music Event 1</h2>
-                        <h6 class="fw-light">Friday, August 18 | 1 - 2pm</h6>
-                        <h6 class="fw-light">WestsideHQ 3 Clewley Street Corinda, QLD 4075</h6>
+                        <h2 class="card-title">{{ event.name}}</h2>
+                        <h6 class="fw-light">When</h6>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <h6>Start</h6>
+                                <p>{{ event.start_time }}:{{ event.start_time.minute }} {{ event.start_date }}</p>
+                            </div>
+                            <div class="col-md-3">
+                                <h6>End</h6>
+                                <p>{{ event.end_date }} {{ event.end_time }}</p>
+                            </div>
+                        </div>
+                        <h6 class="fw-light">{{ event.location}}</h6>
                         <hr>
                         <div class="row justify-content-center text-center">
                             <div class="col-md-5 border">
