--- a/a3_group98/MusicEventCentral/templates/base.html
+++ b/a3_group98/MusicEventCentral/templates/base.html
@@ -34,23 +34,22 @@
                 </button>
 
                 <!--Search -->
-                <form class="d-flex mt-3">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex mt-3" action="{{url_for('main.search')}}">
+                    <input <input type="text" name="search" placeholder="Search" aria-label="Search" id="SearchForm">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
-
                 <!-- Navbar -->
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <div class="navbar-nav ml-auto">
-                        
+
                         <!-- Register/Login/Logout and welcome -->
-                        
+
                         {% if current_user.is_authenticated %}
                         <a class="nav-item nav-link disabled text-muted" href="#">Welcome {{current_user.name}}</a>
                         <a class="nav-item nav-link" href="/events/listing">Find Events</a>
                         <a class="nav-item nav-link" href="{{ url_for('event.create') }}">Create Event</a>
-                        
-                        
+
+
                         <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
                         {% else %}
                         <a class="nav-item nav-link" href="/events/listing">Find Events</a>
