--- a/a3_group98/MusicEventCentral/templates/events/event_details.html
+++ b/a3_group98/MusicEventCentral/templates/events/event_details.html
@@ -20,7 +20,7 @@
     <!-- Event Details -->
     <div class="container">
         <div class="row justify-content-start">
-            <div class="col-md-8">
+            <div class="col-md-8"">
                 <h4 class=" col-sm-2 rounded-3 text-center border bg-success text-light">OPEN</h4>
                 <h1>{{ event.name }}</h1>
                 <!-- <h6>By <strong>{{ event.user_id }}</strong></h6> -->
@@ -30,11 +30,13 @@
                 <div class="row">
                     <div class="col-md-3">
                         <h6>Start</h6>
-                        <p>{{ event.start_date.strftime('%d %b %Y') }} | {{ event.start_time.strftime('%H:%M %p') }}</p>
+                        <p>{{ event.start_date.strftime('%d %b %Y') }} | {{
+                            event.start_time.strftime('%H:%M %p') }}</p>
                     </div>
                     <div class="col-md-3">
                         <h6>End</h6>
-                        <p>{{ event.end_date.strftime('%d %b %Y') }} | {{ event.end_time.strftime('%I:%M %p') }}</p>
+                        <p>{{ event.end_date.strftime('%d %b %Y') }} | {{
+                            event.end_time.strftime('%I:%M %p') }}</p>
                     </div>
                 </div>
                 <h2>About This Event</h2>
@@ -112,77 +114,46 @@
                 <!-- Comment Section -->
                 <div class="card mt-3 mb-3">
                     <h4 class="card-header text-center">Comments</h4>
-                    <div class="card-body">
+                    <div class="row border-bottom">
                         {% for comment in event.comments %}
-                        <div class="row">
-                            <div class="col-md-12">
-                                <b>{{ comment.user.name }} <span class="ml-2 text-muted">{{ comment.created_at
-                                        }}</span></b>
-                                <p>{{ comment.text }}</p>
-                            </div>
+                        <div class="col-md-12 mx-3 mt-1">
+                            <b>{{ comment.user.name }} <span class="ml-2 text-muted">{{ comment.created_at.strftime('%d
+                                    %b
+                                    %Y') }}</span></b>
+                            <p>{{ comment.text }}</p>
                         </div>
                         {% endfor %}
-                        <!-- I CANT GET THIS LINE TO WORK
-                        render_form(form,"/events/{0}/comment".format(event.id))
-                        -->
-                        
                     </div>
-                </div>
-                <!-- <h6 class="col-sm-8 fw-bold">MusicLover123</h6> -->
-                <!-- <h6 class="col-sm-4 small text-muted">10/07/23</h6> -->
-                <!-- <h6 class="col-sm-12 fw-light">Love it!</h6> -->
-                <!-- <hr> -->
+                    <!-- Add Comment Modal Window  -->
+                    <div class="card-footer">
+                        <div class="text-center">
+                            <button type="button" class="btn btn-secondary" data-bs-toggle="modal"
+                                data-bs-target="#commentModal">
+                                <h6>Add Comment</h6>
+                            </button>
+                        </div>
 
-
-                <!--<div class="row"> -->
-                <!--    <h6 class="col-sm-8 fw-bold">MusicLover321</h6> -->
-                <!--    <h6 class="col-sm-4 small text-muted">12/07/23</h6> -->
-                <!--    <h6 class="col-sm-12 fw-light">Went last year! So good!</h6> -->
-                <!--    <hr> -->
-                <!--</div> -->
-                <!--<div class="row"> -->
-                <!--   <h6 class="col-sm-8 fw-bold">MusicAllDay</h6> -->
-                <!--    <h6 class="col-sm-4 small text-muted">10/04/23</h6> -->
-                <!--    <h6 class="col-sm-12 fw-light">Just got tickets! Can't wait!</h6> -->
-                <!--</div> -->
-
-                <!-- Add Comment Modal Window -->
-                <div class="card-footer">
-                    <div class="text-center">
-                        <button type="button" class="btn btn-secondary" data-bs-toggle="modal"
-                            data-bs-target="#commentModal">
-                            <h6>Comment</h6>
-                        </button>
-                    </div>
-
-                    <div class="modal fade" id="commentModal" tabindex="-1" role="dialog"
-                        aria-labelledby="commentModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="commentModalLabel">New Comment</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <form>
-                                        <div class="form-group">
-                                            <label for="message-text" class="col-form-label">Comment:</label>
-                                            <textarea class="form-control" id="message-text"></textarea>
-                                        </div>
-                                    </form>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-primary">Post</button>
+                        <div class="modal fade" id="commentModal" tabindex="-1" role="dialog"
+                            aria-labelledby="commentModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="commentModalLabel">New Comment</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        {{ render_form(form,"/events/{0}/comment".format(event.id)) }}
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    </div>
+                </div>
+
+            </div>
+
+        </div>
 </body>
 {% endblock %}
