--- a/a3_group98/MusicEventCentral/templates/base.html
+++ b/a3_group98/MusicEventCentral/templates/base.html
@@ -72,8 +72,8 @@
 
     {% endblock %}
 
-    <footer class="footer">
-        <div class="text-center py-5 bg-light">
+    <footer class="footer mt-5">
+        <div class="text-center py-3 bg-light">
             <span class="text-dark">Copyright &copy; Jenna Dyer 2023</span>
         </div>
     </footer>
