--- a/a3_group98/MusicEventCentral/templates/events/event_details.html
+++ b/a3_group98/MusicEventCentral/templates/events/event_details.html
@@ -5,7 +5,6 @@
 {% block content %}
 
 <body>
-
     <!-- Event Image -->
     <div class="container-fluid">
         <div class="row justify-content-center mt-5 pb-4">
@@ -46,7 +45,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card mt-3" style=" height: 11rem;">
+                <div class="card " style=" height: 10rem;">
                     <div class="card-body">
                         <div class="text-center">
                             <p></p>
@@ -58,43 +57,54 @@
                             </button>
                         </div>
 
+
                         <!-- Book Ticket (Modal Window) -->
                         <div class="modal fade" id="bookingModal" tabindex="-1" aria-labelledby="bookingModalLabel"
                             aria-hidden="true">
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
+                                    {% if not current_user.is_authenticated %}
+                                    <div class="notification is-danger">
+                                        Please Login to access this content. Go to <a
+                                            href="{{ url_for('auth.login') }}">login
+                                            page</a>.
+                                    </div>
+                                    {% endif %}
+                                    {% if current_user.is_authenticated %}
                                     <div class="modal-body">
-                                        <h2 class="modal-title text-center fw-bold" id="bookingModalLabel">Music Event
+                                        <h2 class="modal-title text-center fw-bold" id="bookingModalLabel">{{ event.name
+                                            }}
                                         </h2>
-                                        <h3 class="fw-light text-center">Friday, August 19 | 1 - 2pm</h3>
+                                        <h3 class="fw-light text-center">{{ event.start_date.strftime('%d %b %Y') }}, {{
+                                            event.start_time.strftime('%H:%M %p') }} - {{ event.end_date.strftime('%d %b
+                                            %Y') }}, {{
+                                            event.end_time.strftime('%I:%M %p') }}</h3>
                                         <div class="row justify-content-center">
                                             <div class="card col-md-7 mt-3" style=" height: 18rem;">
                                                 <div class=" card-body">
                                                     <div class="row">
-                                                        <h4 class="fw-bold mt-1 col-sm-8">General
-                                                            Admission</h4>
-                                                        <div class="form-group mb-3 col-sm-3">
-                                                            <input type="number" class="form-control text-center"
-                                                                placeholder="1" id="ticketAvailability" min="1">
-                                                        </div>
+                                                        <h3 class="fw-bold mt-1 ">Buy Ticket</h3>
                                                         <hr>
+                                                        <h4 class="">Price: A${{ event.price }}</h4>
+                                                        <p class="text-muted">1 ticket per person. Price includes tax.
+                                                        </p>
+                                                        {{
+                                                        render_form(b_form,"/events/{0}/booking".format(event.id))
+                                                        }}
+                                                        {% if b_form %}
+                                                        <div id="myModal" class="modal">
+
+                                                            <!-- Modal content -->
+                                                            <div class="modal-content">
+                                                                <span class="close">&times;</span>
+                                                                <p>Some text in the Modal..</p>
+                                                            </div>
+
+                                                        </div>
+
+                                                        {% endif %}
                                                     </div>
-                                                    <h4 class="">A$25.00</h4>
-                                                    <p class="text-muted">1 ticket per person. Price includes tax.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                            <div class="card mx-3 col-md-4">
-                                                <img class="card-img-top" style="max-height: 500px;"
-                                                    src="/static/img/event1.jpeg" alt="Event 1 Image">
-                                                <div class="card-body">
-                                                    <h5 class="card-title text-center">Order Summary</h5>
-                                                    <p class="card-text">1x General Admission</p>
-                                                    <hr>
-                                                    <div class="row">
-                                                        <h5 class="fw-bold col-sm-6">Total</h5>
-                                                        <h5 class="fw-bold col-sm-6">A$25.00</h5>
-                                                    </div>
+
                                                 </div>
                                             </div>
                                             <!-- </div> -->
@@ -103,21 +113,21 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancel</button>
-                                        <button type="button" class="btn btn-primary">Check Out</button>
                                     </div>
                                 </div>
+                                {% endif %}
                             </div>
                         </div>
 
                     </div>
                 </div>
                 <!-- Comment Section -->
-                <div class="card mt-3 mb-3">
+                <div class="card mt-5 mb-3">
                     <h4 class="card-header text-center">Comments</h4>
                     <div class="row border-bottom">
                         {% for comment in event.comments %}
-                        <div class="col-md-12 mx-3 mt-1">
-                            <b>{{ comment.user.name }} <span class="ml-2 text-muted">{{ comment.created_at.strftime('%d
+                        <div class=" col-md-12 mx-3 mt-1 ">
+                            <b>{{ comment.user.name }} <span class=" ml-2 text-muted">{{ comment.created_at.strftime('%d
                                     %b
                                     %Y') }}</span></b>
                             <p>{{ comment.text }}</p>
@@ -130,7 +140,9 @@
                             <button type="button" class="btn btn-secondary" data-bs-toggle="modal"
                                 data-bs-target="#commentModal">
                                 <h6>Add Comment</h6>
+
                             </button>
+
                         </div>
 
                         <div class="modal fade" id="commentModal" tabindex="-1" role="dialog"
@@ -142,8 +154,18 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
+
                                     <div class="modal-body">
+                                        {% if not current_user.is_authenticated %}
+                                        <div class="notification is-danger">
+                                            Please Login to access this content. Go to <a
+                                                href="{{ url_for('auth.login') }}">login
+                                                page</a>.
+                                        </div>
+                                        {% endif %}
+                                        {% if current_user.is_authenticated %}
                                         {{ render_form(form,"/events/{0}/comment".format(event.id)) }}
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
