--- a/a3_group98/MusicEventCentral/templates/user.html
+++ b/a3_group98/MusicEventCentral/templates/user.html
@@ -11,6 +11,13 @@
 
   <!-- Form rendering is simple and easy if using bootstrap -->
   <div class="col-md-6 ml-5">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <h4 class="text-danger">{{ message }}</h4>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
     {{render_form(form)}}
   </div>
 
