--- a/a3_group98/MusicEventCentral/templates/events/event_creation.html
+++ b/a3_group98/MusicEventCentral/templates/events/event_creation.html
@@ -9,7 +9,12 @@
     <!-- Event Details -->
     <div class="container">
         <div class="row justify-content-start ">
+            {% if update_event %}
+            <h1 class="mt-3 mb-3">Update Event</h1>
+            {% else %}
             <h1 class="mt-3 mb-3">Create Event</h1>
+            {% endif %}
+
             <hr>
             {% if not current_user.is_authenticated %}
             <div class="notification is-danger">
@@ -18,7 +23,11 @@
             </div>
             {% endif %}
             {% if current_user.is_authenticated %}
+            {% if update_event %}
+            {{render_form(u_form)}}
+            {% else %}
             {{render_form(form)}}
+            {% endif %}
             {% endif %}
         </div>
     </div>
