--- a/a3_group98/MusicEventCentral/templates/events/event_listing.html
+++ b/a3_group98/MusicEventCentral/templates/events/event_listing.html
@@ -5,7 +5,20 @@
 <body>
     <!-- Event List -->
     <div class="container ">
+        {% if genre_sort %}
+        <h1 class="mt-3 mb-3">{{ genre }} Events</h1>
+        {% else %}
         <h1 class="mt-3 mb-3">Current Events</h1>
+        {% endif %}
+        <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        {% for message in messages %}
+        <h4 class="text-success">{{ message }}</h4>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+        {% if events %}
         {% for event in events %}
         <div class="card mt-3 mb-3 border">
             <a class="nav-item nav-link" href="/events/details={{ event.id }}">
@@ -14,7 +27,17 @@
                         <img class="card-img-top" style="height: 300px" src="{{ event.image }}" alt="Event 1 Image">
                     </div>
                     <div class="col-md-8">
-                        <div class="card-header bg-success text-light"><strong>OPEN</strong></div>
+                        {% if event.status == 'Sold Out': %} <h4 class="card-header bg-danger text-light">SOLD
+                            OUT</h4>
+                        {% elif event.status == 'Open': %} <h4 class="card-header bg-success text-light">OPEN
+                        </h4>
+                        {% elif event.status == 'Inactive': %} <h4 class="card-header bg-secondary text-light">
+                            INACTIVE
+                        </h4>
+                        {% elif event.status == 'Cancelled': %} <h4 class="card-header bg-warning text-dark">
+                            CANCELLED
+                        </h4>
+                        {% endif %}
                         <div class="card-body">
                             <div class="row">
                                 <h2 class="card-title col-md-9">{{ event.name }}</h2>
@@ -29,6 +52,9 @@
             </a>
         </div>
         {% endfor %}
+        {% else %}
+        <h1>Sorry, there are currently no events for this catergory.</h1>
+        {% endif %}
     </div>
 </body>
 {% endblock %}
