--- a/a3_group98/MusicEventCentral/templates/events/event_details.html
+++ b/a3_group98/MusicEventCentral/templates/events/event_details.html
@@ -8,7 +8,7 @@
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     {% for message in messages %}
-    <h2 class="text-center mt-5 text-danger">{{ message }}</h2>
+    <h2 class="text-center mt-5">{{ message }}</h2>
     {% endfor %}
     {% endif %}
     {% endwith %}
